--- a/css/footer.css
+++ b/css/footer.css
@@ -7,25 +7,24 @@
 }
 
 .progress-container {
-  width: 100%;
-  height: 30px;
+  width: 80%;
+  height: 20px;
   background: #ccc;
 }
 
 .progress-bar {
-  height: 30px;
+  height: 20px;
   background: red;
   width: 0%;
+  padding-top: 15px;
 }
 
-.footer-text {
-  text-align: right;
-  color: red;
-}
-
-.footer-text2 {
-  text-align: right;
-  vertical-align: middle;
-  color: red;
+.footer-float {
   float: right;
+}
+
+.footer-txt {
+  width: 20%;
+  margin: -15px;
+  font-size:0.8vw;
 }
